--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,11 @@
 
 .team-member img {
     width: 100%;
-    height: 350px;
+    height: auto;
+    aspect-ratio: 1 / 1; 
     object-fit: cover;
     border-radius: 4px;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .team-member h3 {
@@ -98,6 +99,7 @@
     }
 
     .team-member img {
-        height: 300px;
+        height: auto;
+        aspect-ratio: 1 / 1; 
     }
 }
