--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,19 @@
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
+    .navbar-container {
+        flex-direction: row-reverse;
+        align-items: left;
+    }
+
+    .navbar-brand-container {
+        order: -1;
+    }
+
+    .navbar-logo {
+        max-height: 50px;
+    }
+
     .team-grid {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         gap: 1.5rem;
